# OpenCV-samples

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/DisplayImage/: CMakeLists.txt  DisplayImage.cpp
src/Webcam/: CMakeLists.txt  Webcam.cpp
